# git-dupe

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup.cfg
tests/config/: mapping.yml
