[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]

[project]
name = "git-repli"
description = "git clone with context"
requires-python = ">=3.12.0"
license = {file = "LICENSE"}
authors = [{name = "DPPereyra", email = "dppereyra@gmail.com"}]
dynamic = ["version", "readme"]
dependencies = [
    "pydantic[email]>=2.11.7",
    "omegaconf>=2.3.0",
    "fire>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.6",
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "radon>=6.0.1",
    "vulture>=2.13",
    "nuitka>=2.7.12",
    "tox>=4.28.4",
    "pytest-cov>=6.2.1",
]

[tool.pdm]
distribution = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "git_repli.__version__" }
readme = { file = ["README.md"] }

[project.scripts]
git-repli = "git_repli:main"
